examples/attribute_test/tests/compile-fail/undefined_variable.rs
fn foo() {
    x = 10; //~ ERROR cannot
}
